...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="YCd-T3-uRM" id="WK2-Qx-Lzp"/>
                            <outlet property="delegate" destination="YCd-T3-uRM" id="EU8-aK-E9S"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="My History" id="pQB-dg-pEa"/>
                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="ByU-nU-ZZf">
                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <connections>
                            <action selector="refresh:" destination="YCd-T3-uRM" eventType="valueChanged" id="oNQ-Xh-VR6"/>
                        </connections>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bda-HF-h3I">
                                <rect key="frame" x="20" y="587" width="374" height="55"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Copy my code">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="btnPressCopy:" destination="kPb-V7-yMg" eventType="touchUpInside" id="Zfk-pw-Osf"/>
                                </connections>
                            </button>
...
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Scan" image="camera" catalog="system" id="dEw-86-L5l"/>
                    <connections>
                        <outlet property="scanBtn" destination="0T7-Os-OrS" id="WHu-RX-tjJ"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
...
